--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 <section class="projects-section" id="projects-section">
   <h1 class="section-title">Projects</h1>
   <div class="buttons-container">
-    <a href="reel.html" class="nav-button">Reel</a>
-    <a href="news.html" class="nav-button">Program</a>
-    <a href="add.html" class="nav-button">Add</a>
+   <a href="https://drive.google.com/drive/folders/1kgXCdVlbsL2jYnaWiv4N6tniAhsXg7Jd?usp=drive_link" class="nav-button">Reel</a>
+    <a href="https://drive.google.com/drive/folders/1PLTFJO1r1HsTzLnO82Q0CCQlP7FB0cSP?usp=drive_link" class="nav-button">Program</a>
+    <a href="https://drive.google.com/drive/folders/1h6LpV3ItwDyd_aV8h7Ue18M9H5sAq8HY?usp=drive_link" class="nav-button">Add</a>
     <a href="YouTube.html" class="nav-button">YouTube</a>
   </div>
 </section>
